# latamdata-py

./: .editorconfig  .pre-commit-config.yaml  .zenodo.json  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.es.md  README.md  SECURITY.md  SUPPORT.md  codecov.yml  codemeta.json  datapackage.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs.yml  publish.yml  stale.yml
api/latamdata/: index.html
changelog/: index.html
contributing/: index.html
datasets/catalog/: index.html
docs/: changelog.md  contributing.md  index.md
docs/api/: latamdata.md
docs/datasets/: catalog.md
docs/getting-started/: installation.md  quickstart.md
examples/: basic_usage.py
getting-started/installation/: index.html
getting-started/quickstart/: index.html
latamdata/: __init__.py  datasets.py
search/: search_index.json
tests/: conftest.py  test_latamdata.py
