[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "latamdata-py"
version = "1.0.0"
description = "One-line access to 38+ open research datasets from Latin America (neuroscience, mental health, demographics, economics)"
readme = "README.md"
license = {text = "CC0-1.0"}
authors = [
    {name = "Juan Moisés de la Serna Tuya", email = "jmsernatuya@gmail.com"}
]
keywords = ["latin america", "datasets", "open data", "neuroscience", "mental health", "demographics", "economics", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "flake8"]

[project.urls]
Homepage = "https://github.com/juanmoisesd/latamdata-py"
Documentation = "https://github.com/juanmoisesd/latamdata-py#readme"
Repository = "https://github.com/juanmoisesd/latamdata-py"
"Bug Tracker" = "https://github.com/juanmoisesd/latamdata-py/issues"
ORCID = "https://orcid.org/0000-0002-8401-8018"

[tool.setuptools.packages.find]
where = ["."]
include = ["latamdata*"]
