[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "latamdata-py"
version = "0.1.0"
description = "One-line access to 38 open research datasets from Latin America"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Juan Moisés Serna Tuya", email = "jmsernatuya@gmail.com"}
]
keywords = ["latin-america", "open-data", "datasets", "neuroscience", "public-health"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.9"
dependencies = [
  "pandas>=1.5.0",
  "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black>=23.0",
  "flake8>=6.0",
  "isort>=5.12",
  "mypy>=1.0",
  "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/juanmoisesd/latamdata-py"
Repository = "https://github.com/juanmoisesd/latamdata-py"
Issues = "https://github.com/juanmoisesd/latamdata-py/issues"
Changelog = "https://github.com/juanmoisesd/latamdata-py/blob/main/CHANGELOG.md"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["latamdata"]
omit = ["tests/*", "examples/*"]
